# platform.core.uifw.libscl-core

./: AUTHORS  CMakeLists.txt  ChangeLog  NOTICE  README  libscl-core.pc.in  project.config
packaging/: libscl-core.spec
src/: input-method-client-protocol.h  input-method-protocol.c  sclconnection-isf.cpp  sclconnection-isf.h  sclconnection.cpp  sclconnection.h  sclcore.cpp  sclcore.h  sclcorecallback.h  sclcoreimpl.cpp  sclcoreimpl.h  sclcoretypes.h  sclcoreui-efl.cpp  sclcoreui-efl.h  sclcoreui.cpp  sclcoreui.h
src/legacy_support/: web_helper_agent.cpp  web_helper_agent.h  websocket.cpp  websocket.h
